[package]
name = "alpha-tak"
version = "0.1.0"
edition = "2021"
description = "AlphaZero for Tak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tak = {path = "../tak"}
tch = { git = "https://github.com/LaurentMazare/tch-rs", rev = "4325d3ddc2aad74fe906f6164f9fe460cc0da9b2" }
rand = "0.8"
rand_distr = "0.4"
lazy_static = "1.4"
arrayvec = "0.7"
