[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "tei"
path = "src/tei.rs"

[dependencies]
tak = { path = "../tak" }
alpha-tak = { path = "../alpha-tak" }
clap = { version = "3.1.9", features = ["derive"] }
mimalloc = { version = "0.1.28", default-features = false }
