[package]
name = "playtak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tak = { path = "../tak" }
alpha-tak = { path = "../alpha-tak" }
clap = { version = "3.1", features = ["derive"] }
tokio-takconnect = "0.1.0"
tokio = { version = "1", features = ["full"] }
takparse = "0.5.2"
simple-logging = "2.0"
log = "0.4"

[profile.release]
lto = true
