[package]
name = "playtak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tak = { path = "../tak" }
alpha-tak = { path = "../alpha-tak" }
clap = { version = "3.1.9", features = ["derive"] }
mimalloc = { version = "0.1.28", default-features = false }

log = "0.4.16"
simple-logging = "2.0.2"
takparse = "0.5.2"
tokio = { version = "1.17.0", features = ["full"] }
tokio-takconnect = "0.1.3"
